# plutomi

./: .all-contributorsrc  .cspell.json  .dockerignore  .env.example  .env.local  .env.production  .env.sample  .eslintrc  .eslintrc.js  .eslintrc.json  .gitignore  .prettierignore  API.d.ts  ARCHITECTURE.md  ApplicantResponses.d.ts  Applicants.d.ts  CLA.md  CONTRIBUTING.md  Cargo.toml  CommonErrors.md  Config.ts  DEPLOYING NEW.md  DEPLOYING.md  Dockerfile  Dockerfile.web  EVENT_STREAMING_PIPELINE.md  FLY-README.md  LICENSE  LICENSE.md  Questions.d.ts  README.md  TROUBLESHOOTING.md  additional.d.ts  api.production.toml  app.ts  axios.ts  b.ts  bun.lockb  ca.crt  cdk.json  (+46 more)
.github/: CODEOWNERS  pull_request_template.m  release-drafter.yml  semantic.yml
@types/: allEntityNames.ts  collections.ts  customQuery.ts  indexableProperties.ts
APIControllers/: APIInfo.ts  Users.ts  auth.ts
Adapters/: ApplicantsService.ts  AuthService.ts  InvitesService.ts  OpeningsService.ts  OrgsService.ts  PublicInfoService.ts  QuestionsService.ts  StagesService.ts  UsersService.ts
Controllers/: Applicants.ts  Auth.ts  Emails.ts  Invites.ts  Metadata.ts  Openings.ts  Orgs.ts  PublicInfo.ts  Questions.ts  Stages.ts  Users.ts  index.ts  jest-setup.ts  publicInfo.ts  test.ts
OLD/: .env.sample  .eslintrc  .eslintrc.json  .prettierignore  .prettierrc  Config.ts  app.ts  env.ts  mongo.ts  nodemon.json  (+2 more)
services/api/: Cargo.toml  Dockerfile  README.md  bun.lockb  go.mod  go.sum  index.ts  main.go  package.json
services/api/.sqlx/: query-1ac963c639ffdada67136830cc30637db3ea43c2ca1e18ca52702cd8ab45300a.json  query-2414d6b3164fef8a7411c1aed8400f38e2ad1928cb9a2de4de3b6c542cdc9cdc.json  query-b98f8d299747236cd13a9b2a5bff3762f8ca4cd50f33252b7dc6d19c3b770553.json
services/api/handlers/: docs.go  health_check.go  method_not_allowed.go  not_found.go  root.go
services/api/handlers/meta/: docs.go  health_check.go  method_not_allowed.go  not_found.go
services/api/handlers/users/: createUsers.go
services/api/routes/: setup_routes.go
services/api/src/: constants.rs  consts.rs  controllers.rs  entities.rs  main.rs  structs.rs  utils.rs
services/api/src/controllers/: health_check.rs  method_not_allowed.rs  not_found.rs  sample.rs  totp.rs  users.rs
services/api/src/controllers/totp/: create_totp.rs  request_totp.rs
services/api/src/handlers/: users.rs
services/api/src/handlers/users/: create_user.rs
services/api/src/structs/: api_error.rs  api_response.rs  app_state.rs
services/api/src/utils/: generate_id.rs  get_env.rs  get_reserved_workspace_ids.rs  kafka.rs  log_req_res.rs  logger.rs  mongodb.rs  parse_request.rs  timeout.rs
services/api/types/: plutomi_response.go
services/consumers/template/: .gitignore  Cargo.toml  Dockerfile
services/consumers/template/src/: main.rs
services/events-consumer/: Cargo.toml  README.md
services/events-consumer/src/: config.rs  create_consumer.rs  main.rs  setup_consumer.rs
services/shared/: Cargo.toml  README.md  go.mod  go.sum  main.go  types.go
services/shared/clients/: kafka.go  mysql.go
services/shared/constants/: ids.go  kafka.go  reserved_workspaces.go
services/shared/consumers/: consumers.go  kafka.go
services/shared/context/: app_context.go  context.go
services/shared/entities/: internal_event.go  internal_task.go  user.go
services/shared/events/: envelope.go  totp_requested.go
services/shared/src/: constants.rs  consumers.rs  entities.rs  events.rs  generate_id.rs  get_env.rs  id_generation.rs  kafka.rs  lib.rs  logger.rs  mongodb.rs  mysql.rs  nats.rs  retry.rs  serializers.rs  sleep_and_exit.rs
services/shared/src/entities/: user.rs
services/shared/types/: app_context.go  environment_variables.go  time.go
services/shared/utils/: context.go  get_env_with_default.go  ids.go  init_app_context.go  load_env.go  logger.go  mysql.go
(+1946 files in other folders)
