[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.30", features = ["formatting"] }
tower-http = { version = "0.5.0", features = ["full"] }
axum = "0.7.2"
tokio = { version = "1.34.0", features = ["full"] }
rand = "0.8.5"
dotenv = "0.15.0"
serde_json = "1.0.120"
serde =  "1.0.204" 
futures = "0.3.29"
tracing = "0.1.40"
tower = { version = "0.4.13", features = ["timeout"] }
axiom-rs = "0.9.0"
http-body-util = "0.1.0"
getrandom = "0.2.11"
byteorder = "1.5.0"
base-encode = "0.3.1"
tracing-subscriber = { version = "0.3.18" }
# Vendored is required to compile OpenSSL on systems without it installed.
# https://stackoverflow.com/questions/70561544/rust-openssl-could-not-find-directory-of-openssl-installation
openssl = { version = "0.10.66", features = ["vendored"] }
# Shared utils
shared = { path = "../shared" }
mongodb = "3.0.0"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
hyper = "1.4.1"

[profile.release]
# https://github.com/johnthagen/min-sized-rust
strip = true # Automatically strip symbols from the binary.
lto = true   # Enable link-time optimizations.
