[package]
name = "events-consumer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-nats = "0.35.1"
dotenv = "0.15.0"
futures = "0.3.30"

mongodb = "3.0.1"
rand = "0.8.5"
serde = "1.0.204"
serde_json = "1.0.120"
shared = { path = "../shared" }
time = "0.3.36"
tokio = { version = "1.34.0", features = ["full", "macros"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

