[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base-encode = "0.3.1"
byteorder = "1.5.0"
rand = "0.8.5"
serde = { version = "1.0.204" , features = ["derive"]}
serde_json = "1.0.120"
time = "0.3.36"
