[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-rs = "0.10.0"
base-encode = "0.3.1"
byteorder = "1.5.0"
mongodb = "3.0.0"
rand = "0.8.5"
serde = { version = "1.0.204" , features = ["derive"]}
serde_json = "1.0.120"
time = { version = "0.3.36", features = ["formatting", "macros"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
