[package]
name = "shared"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axiom-rs = "0.10.0"
base-encode = "0.3.1"
byteorder = "1.5.0"
bytes = "1.6.1"
dotenv = "0.15.0"
futures = "0.3.30"
rand = "0.8.5"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde =  { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
strum = "0.26.3"
strum_macros = "0.26.4"
thiserror = "1.0.63"
time = { version = "0.3.36", features = ["formatting", "macros"] }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
