[package]
name = "orders"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
futures = "0.3.30"
rdkafka = { version = "0.36.2", features = ["cmake-build"] }
serde = "1.0.210"
serde_json = "1.0.128"
shared = { path = "../../shared" }
time = "0.3.36"
tokio = { version = "1.40.0", features = ["full"] }
